--- a/app/views/partials/nav/_closure_info.haml
+++ b/app/views/partials/nav/_closure_info.haml
@@ -1,7 +1,7 @@
 .closure-info
   .closure-icon
     - if @active_closure.type == 'snow'
-      = fa_icon 'snowflake-o'
+      = fa_icon 'snowflake'
     - else
       = fa_icon 'exclamation-triangle'
   .closure-content
