--- a/app/views/welcome/home/show.haml
+++ b/app/views/welcome/home/show.haml
@@ -1,6 +1,6 @@
 = content_for :description, t('welcome.home.description')
 
-.row.mt-3
+.row
   .col-md-8.d-flex.flex-column
     = render 'slider'
     = render 'announcements'
