--- a/app/views/departments/index.haml
+++ b/app/views/departments/index.haml
@@ -1,34 +1,32 @@
-.page-wrapper
-  %header.page-heading.clearfix
-    .row
-      .col-xs-12.col-sm-5
-        %h1.heading-title.pull-left Departments
-      .col-xs-12.col-sm-7
-        = render partial: "partials/index_search_bar", locals: {path: departments_path}
-        = render partial: "partials/modtools", locals: {actions: @actions}
-  .page-content
+.row
+  .col
+    %h1 Departments
+  .col.d-flex
+    = render partial: 'partials/modtools', locals: {actions: @actions}
+    .flex-grow-1
+      = render partial: 'partials/index_search_bar', locals: {path: departments_path}
 
-    .department-type
-      %h1.department-type-header Administrative
-      .row
-        - @departments.select {|d| d.type == 'administrative'}.each do |department|
-          .col-md-4
-            = link_to department_path(department) do
-              .department-panel
-                %h2= department.name
-                %p= department.summary.truncate(120)
+.department-type
+  %h1.department-type-header Administrative
+  .row
+    - @departments.select {|d| d.type == 'administrative'}.each do |department|
+      .col-lg-4
+        = link_to department_path(department) do
+          .department-panel
+            %h2= department.name
+            %p= department.summary.truncate(120)
 
-    .department-type
-      %h1.department-type-header Instructional
-      .row
-        - @departments.select {|d| d.type == 'instructional'}.each do |department|
-          .col-md-3
-            = link_to department_path(department) do
-              .department-panel
-                %h2= department.name
-                %p= department.summary.truncate(120)
+.department-type
+  %h1.department-type-header Instructional
+  .row
+    - @departments.select {|d| d.type == 'instructional'}.each do |department|
+      .col-lg-3
+        = link_to department_path(department) do
+          .department-panel
+            %h2= department.name
+            %p= department.summary.truncate(120)
 
-  - if @order_mode
-    -# allow admins to re-order departments
-    %h2 All Departments
-    = render 'table'
+- if @order_mode
+  -# allow admins to re-order departments
+  %h2 All Departments
+  = render 'table'
