--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,16 +24,16 @@
       %meta{name: "description", content: yield(:description)}
   %body{"data-no-turbolink" => yield(:disable_turbolinks), "data-model-name" => yield(:model_name), "data-current-user-id" => Current.user&.id, "data-params-id" => (params[:id] || yield(:model_id)) }
     %a.skip.screen-reader-text{:href => "#content"} Skip to content
-    - if Current.user&.staff?
+    -# if Current.user&.staff? TEMPORARILY DISABLED
       %div#support{"data-turbolinks-permanent" => true}
         = render 'partials/chat/chat_button'
         = render 'partials/chat/chat'
     .wrapper
-      - unless params[:action] == 'landing' || Current.user&.admin_enabled?
+      - unless params[:controller] == 'welcome/landing' || Current.user&.admin_enabled?
         = render 'partials/header'
       = render 'partials/navbar'
       = render 'peek/bar'
-      #content.container
+      #content.container.mt-3
         = render 'partials/flash'
         = yield
     = render 'partials/footer'
