--- a/app/views/welcome/landing/show.haml
+++ b/app/views/welcome/landing/show.haml
@@ -1,17 +1,13 @@
-.row
-  .col-md-8.col-md-offset-4
-    .landing-logo
-      = image_tag 'logo.svg', width: "40%"
-.container-fluid
-  .row
-    %form.search-form{action: "https://www.google.com/search", method: :get}
-      .input-group
-        %input.form-control{name: :q, placeholder: t('.search.prompt'), type: :text, autofocus: true}
-        %span.input-group-btn
-          %input.btn.btn-default.landing-search{type: :submit, value: t('.search.submit')}
+.d-flex.justify-content-center.my-5
+  = image_tag 'logo.svg', width: "40%"
 
-.row.table-row
-  .col-md-9
-    = render "welcome/landing/announcements"
-  .col-md-3.landing-quicklinks
-    = render "welcome/landing/quicklinks"
+%form{action: "https://www.google.com/search", method: :get}
+  .form-group.d-flex
+    %input.form-control.flex-grow-1{name: :q, placeholder: t('.search.prompt'), type: :text, autofocus: true}
+    %input.btn.bg-syosset.text-white.ml-3{type: :submit, value: t('.search.submit')}
+
+.row
+  .col-md-8
+    = render "welcome/home/announcements"
+  .col-md-4
+    = render "welcome/home/quicklinks"
